<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_nav"
          android:title="@string/go_button"
          android:showAsAction="always">
      <menu>
        <item android:id="@+id/home"
              android:title="@string/home"/>
        <item android:id="@+id/favs"
              android:title="@string/favs"/>
        <item android:id="@+id/action_back"
              android:title="@string/go_up"/>
        <item android:id="@+id/enter"
              android:title="@string/enter"/>
        <item android:id="@+id/search"
           android:title="@string/search_file"/>
        <item android:id="@+id/totop"
              android:title="@string/go_top"/>
        <item android:id="@+id/tobot"
              android:title="@string/go_end"/>
        </menu>
    </item>
    <item android:id="@+id/action_sort"
          android:title="@string/sorting"
          android:showAsAction="always">
          <menu>
              <item android:id="@id/by_name"
                  android:title="@string/sort_by_name"
                  android:checkable="true"/>
              <item android:id="@id/by_ext"
                  android:title="@string/sort_by_ext"
                  android:checkable="true"/>
              <item android:id="@id/by_size"
                  android:title="@string/sort_by_size"
                  android:checkable="true"/>
              <item android:id="@id/by_date"
                  android:title="@string/sort_by_date"
                  android:checkable="true"/>
              <item android:id="@id/by_adate"
                  android:title="@string/sort_by_adate"
                  android:checkable="true"
                  android:visible="false"/>
          </menu>
    </item>
    <item android:id="@+id/action_select"
          android:title="@string/select"
          android:showAsAction="always">
          <menu>
              <item android:id="@id/sel_all"
                   android:title="@string/select_b"/>
              <item android:id="@id/uns_all"
                   android:title="@string/unselect_b"/>
              <item android:id="@+id/sel_between"
                   android:title="@string/select_between"
                  />
              <item android:id="@id/compare"
                    android:title="@string/compare"
                  />
              <item android:id="@id/hidden"
                    android:title="@string/hidden"
                  android:checkable="true"
                  />
              <item android:id="@id/filter"
                  android:title="@string/filter"
                  android:checkable="true"
                  />
          </menu>
    </item>
</menu>
